manifest/api-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: realm-api-dev
  namespace: realm-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: realm-api-dev
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: realm-api-dev
    spec:
      containers:
        - name: realm-api-dev
          image: narongsakk59/ethernal-api:dev-latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8000
