manifest/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: realm-web-dev
  namespace: realm-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: realm-web-dev
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: realm-web-dev
    spec:
      containers:
        - name: realm-web-dev
          image: narongsakk59/realm-web-dev:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
