manifest/api-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: realm-api-dev
  namespace: realm-dev
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8000
  selector:
    app: realm-api-dev
