manifest/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: realm-web-dev
  namespace: realm-dev
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app: realm-web-dev
